Fixes third page product specs alignment

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -282,7 +282,7 @@
     color: white;
   }
 
-  Button {
+  .btn2 {
     display: none;
   }
 }
